# snspd-rcsj

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  plotters.py  requirements.txt  run.py  settings.json  snspd-rcsj.cbp
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
settings/: bias-tee.json  detection.json  fast.json  iv.json  iv_old.json  multiple-detections.json  random_phase.json  settings-photon.json  test.json  test.json5  test_noise.json
src/: CMakeLists.txt  Model.cpp  Model.h  Parameters.h  Settings.h  main.cpp
src/bc/: BiasTeeBoundaryCondition.h  BoundaryCondition.h  BoundaryConditionFactory.h  CurrentBiasBoundaryCondition.h  VoltageBiasBoundaryCondition.h
src/cmake/: AddIndicators.cmake  AddNlohmannJson.cmake
src/event/: EventStorage.h
src/io/: ArgParser.cpp  ArgParser.h  ConfigParser.cpp  ConfigParser.h  Exporter.cpp  Exporter.h
src/math/: TridiagonalMatrix.h  VectorOperations.h
test/: CMakeLists.txt  TestTridiagonalMatrix.cpp  test.cpp
test/math/: TestTridiagonalMatrix.cpp
